--- a/src/catalog/ApiGateway.CatalogApi.csproj
+++ b/src/catalog/ApiGateway.CatalogApi.csproj
@@ -4,5 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
+  </ItemGroup>
 
 </Project>
