--- a/src/gateway/ApiGateway.GatewayApi.csproj
+++ b/src/gateway/ApiGateway.GatewayApi.csproj
@@ -5,8 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="3.1.3" />
     <PackageReference Include="Ocelot" Version="14.1.0" />
   </ItemGroup>
-
 
 </Project>
