update to latest ng packages

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -5,32 +5,32 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.js",
     "build": "ng build",
-    "build-frontend": "ng build --prod --output-path=../gateway/wwwroot",
+    "publish": "ng build --prod --output-path=../gateway/wwwroot",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.7",
-    "@angular/common": "~10.0.7",
-    "@angular/compiler": "~10.0.7",
-    "@angular/core": "~10.0.7",
-    "@angular/forms": "~10.0.7",
-    "@angular/platform-browser": "~10.0.7",
-    "@angular/platform-browser-dynamic": "~10.0.7",
-    "@angular/router": "~10.0.7",
+    "@angular/animations": "~10.1.5",
+    "@angular/common": "~10.1.5",
+    "@angular/compiler": "~10.1.5",
+    "@angular/core": "~10.1.5",
+    "@angular/forms": "~10.1.5",
+    "@angular/platform-browser": "~10.1.5",
+    "@angular/platform-browser-dynamic": "~10.1.5",
+    "@angular/router": "~10.1.5",
     "@aspnet/signalr": "^1.1.4",
     "angular-oauth2-oidc": "^10.0.3",
-    "rxjs": "~6.6.2",
+    "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.5",
-    "@angular/cli": "~10.0.5",
-    "@angular/compiler-cli": "~10.0.7",
-    "@angular/language-service": "~10.0.7",
+    "@angular-devkit/build-angular": "~0.1001.6",
+    "@angular/cli": "~10.1.6",
+    "@angular/compiler-cli": "~10.1.5",
+    "@angular/language-service": "~10.1.5",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
