--- a/src/yarp/appsettings.json
+++ b/src/yarp/appsettings.json
@@ -44,6 +44,18 @@
             "PathPattern": "{**catchall}"
           }
         ]
+      },
+      {
+        "RouteId": "time-socket-route",
+        "ClusterId": "time-socket cluster",
+        "Match": {
+          "Path": "time-ws/{**catchall}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "{**catchall}"
+          }
+        ]
       }
     ],
     "Clusters": {
@@ -65,6 +77,13 @@
         "Destinations": {
           "destination1": {
             "Address": "https://localhost:5003/api"
+          }
+        }
+      },
+      "time-socket cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://localhost:5003"
           }
         }
       }
