--- a/src/yarp/ApiGateway.Proxy.csproj
+++ b/src/yarp/ApiGateway.Proxy.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.9" />
     <PackageReference Include="Microsoft.ReverseProxy" Version="1.0.0-preview.5.20467.3" />
   </ItemGroup>
 
