--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,6 +25,26 @@
       }
     },
     {
+      "name": "YARP",
+      "type": "coreclr",
+      "request": "launch",
+      "preLaunchTask": "build-yarp",
+      "program": "${workspaceFolder}/src/yarp/bin/Debug/netcoreapp3.1/ApiGateway.Yarp.dll",
+      "args": [],
+      "cwd": "${workspaceFolder}/src/gateway",
+      "stopAtEntry": false,
+      "serverReadyAction": {
+        "action": "openExternally",
+        "pattern": "^\\s*Now listening on:\\s+(https?://\\S+)"
+      },
+      "env": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "sourceFileMap": {
+        "/Views": "${workspaceFolder}/Views"
+      }
+    },
+    {
       "name": "STS",
       "type": "coreclr",
       "request": "launch",
