--- a/src/frontend-yarp/package.json
+++ b/src/frontend-yarp/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.js",
     "build": "ng build",
-    "publish-gateway": "ng build --prod --output-path=../gateway/wwwroot",
+    "publish-yarp": "ng build --prod --output-path=../yarp/wwwroot",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -21,7 +21,6 @@
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
     "@aspnet/signalr": "^1.1.4",
-    "angular-oauth2-oidc": "^10.0.3",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
