--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,12 +2,12 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "build",
+      "label": "build-yarp",
       "command": "dotnet",
       "type": "process",
       "args": [
         "build",
-        "${workspaceFolder}/src/gateway/ApiGateway.GatewayApi.csproj",
+        "${workspaceFolder}/src/yarp/ApiGateway.Proxy.csproj",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
